*Empty MediaWiki Message*

--- a/Бѣлъ_Градъ.mw
+++ b/Бѣлъ_Градъ.mw
@@ -1,7 +1,7 @@
 {{Образьць:Мъногосъмыслиѥ}}
 ----
 Виждь:
-<br>
-[[Бѣлъ Градъ (Срьбїи)|Бѣлоградъ]] иже Срьбїи ѥстъ.
-<br>
-[[Бѣлоградъ (Рѡсїи)|Бѣлоградъ]] иже Рѡсїи ѥстъ.
+
+*[[Бѣлъ Градъ (Срьбїи)|Бѣлоградъ]] иже Срьбїи ѥстъ.
+*[[Бѣлоградъ (Рѡсїи)|Бѣлоградъ]] иже Рѡсїи ѥстъ.
+*[[Бѣлоградъ Дънѣстрьскъ]] иже Ѹкраины ѥстъ
