--- a/Проѳєсь_·_рѣчи_чѧсть.mw
+++ b/Проѳєсь_·_рѣчи_чѧсть.mw
@@ -1,2 +1,29 @@
 '''Про́ѳесь''' ([[словѣньскъ ѩзыкъ|словѣньскы]] «прѣдъложениѥ», «прѣдълогъ») слѹжьбьно слово ѥстъ, кажѧ [[сѷнтаѯь|сѷнтаѯїчьна]] cъношени междѹ [[ѹсїастїко|ѹсїастїкомь]] и дрѹгы словесы илиже междѹ ѹсїастїкы.
 [[Category:Ѩзыкознаниѥ]]
+[[ru:Предлог]]
+[[ar:حروف الجر]]
+[[bg:Предлог]]
+[[br:Araogenn]]
+[[bs:Prijedlozi]]
+[[ca:Preposició]]
+[[cs:Předložka]]
+[[da:Forholdsord]]
+[[de:Präposition]]
+[[eml:Preposiziòun]]
+[[eo:Prepozicio]]
+[[es:Preposición]]
+[[fr:Préposition]]
+[[gd:Roimhear]]
+[[gl:Preposición]]
+[[it:Preposizione]]
+[[ja:前置詞]]
+[[la:Praepositio]]
+[[nl:Voorzetsel]]
+[[nn:Preposisjon]]
+[[no:Preposisjon]]
+[[pl:Przyimek]]
+[[pt:Preposição]]
+[[simple:Preposition]]
+[[sv:Preposition]]
+[[wa:Divancete]]
+[[zh:前置詞]]
