*Empty MediaWiki Message*

--- a/Проѳєсь_·_рѣчи_чѧсть.mw
+++ b/Проѳєсь_·_рѣчи_чѧсть.mw
@@ -1,4 +1,4 @@
-{{Дрѹѕи съмысли|Проѳесь (съмысли)}}
+{{Дрѹѕи съмысли|Проѳесь}}
 '''Про́ѳесь''' ([[словѣньскъ ѩзыкъ|словѣньскы]] «прѣдъложениѥ», «прѣдълогъ») слѹжьбьно слово ѥстъ, кажѧ [[сѷнтаѯь|сѷнтаѯїчьна]] cъношени междѹ [[ѹсїастїко|ѹсїастїкомь]] и дрѹгы словесы илиже междѹ ѹсїастїкы.
 [[Category:Ѩзыкознаниѥ]]
 [[ru:Предлог]]
