съвѧзь на википедїѭ въ тарашькевици

--- a/Бѣлороусьскъ_ѩꙁꙑкъ.mw
+++ b/Бѣлороусьскъ_ѩꙁꙑкъ.mw
@@ -11,7 +11,9 @@
 </div>
 
 == Зьри такожде ==
-{{InterWiki|be|Галоўная старонка||бѣлорѹсьскыимь}}
+{{InterWiki|be|Галоўная старонка|| епїсимьныимь бѣлорѹсьскыимь}}
+
+{{InterWiki|be-x-old|Галоўная старонка|| класїчьныимь бѣлорѹсьскыимь}}
 
 [[Category:Словѣньсци ѩзыци]]
 [[Category:Бѣла Рѹсь| ]]
