--- a/Проѳєсь_·_ꙁвѫкъ.mw
+++ b/Проѳєсь_·_ꙁвѫкъ.mw
@@ -1,4 +1,4 @@
 {{Дрѹѕи съмысли|Проѳесь}}
 
-'''Про́ѳесь''' или проѳетїчьнъ звѫкъ ([[грьчьскъ ѩзыкъ|грьчьскы]] πρόθεσις «прѣдъложениѥ», «прѣдлогъ») словесе начѧлѣ добавьна звѫка авлѥниѥ ѥстъ. [[словѣньскъ ѩзыкъ|Словѣньстѣѥмь]] ѩзыцѣ проѳесь сѧ прѣдъ начѧльны звѫкы авлѥтъ: ј- прѣдъ прѣдьн рѧдѹ гласьникы е-, и-, ь-, ѧ-, ѥгда же в- авлѥнъ прѣдъ задьн рѧдѹ гласьникы ъ-, ы-, иногда прѣдъ ѫ- ѥстъ. Инѣхъ словѣньстѣхъ [[дїалектъ|дїалектѣхъ]] ј- сѧ такоже прѣдъ начѧльномь а- авлѥтъ: сл҃в авити, аблъко ~ дрѹгосл҃в *javiti, *jablŭko . Послѣдьн словѣньскы [[Словѣньска азъбѹкы|Кѷрилловици]] ѥстъ:ⱑⰱⰾⱏⰽⱁ, ⱑⰲⰻⱅⰻ ит҃д.
+'''Про́ѳесь''' или проѳетїчьнъ звѫкъ ([[грьчьскъ ѩзыкъ|грьчьскы]] πρόθεσις «прѣдъложениѥ», «прѣдълогъ») словесе начѧлѣ добавьна звѫка авлѥниѥ ѥстъ. [[словѣньскъ ѩзыкъ|Словѣньстѣѥмь]] ѩзыцѣ проѳесь сѧ прѣдъ начѧльны звѫкы авлѥтъ: ј- прѣдъ прѣдьн рѧдѹ гласьникы е-, и-, ь-, ѧ-, ѥгда же в- авлѥнъ прѣдъ задьн рѧдѹ гласьникы ъ-, ы-, иногда прѣдъ ѫ- ѥстъ. Инѣхъ словѣньстѣхъ [[дїалектъ|дїалектѣхъ]] ј- сѧ такоже прѣдъ начѧльномь а- авлѥтъ: сл҃в авити, аблъко ~ дрѹгосл҃в *javiti, *jablŭko . Послѣдьн словѣньскы [[Словѣньска азъбѹкы|Кѷрилловици]] ѥстъ:ⱑⰱⰾⱏⰽⱁ, ⱑⰲⰻⱅⰻ ит҃д.
 [[Category:Ѩзыкознаниѥ]]
