--- a/Бѣлъ_Градъ.mw
+++ b/Бѣлъ_Градъ.mw
@@ -4,7 +4,7 @@
 
 *[[Бѣлъ Градъ (Срьбїи)|Бѣлоградъ]] иже Срьбїи ѥстъ.
 *[[Бѣлоградъ (Рѡсїи)|Бѣлоградъ]] иже Рѡсїи ѥстъ.
-*[[Бѣлоградъ Дънѣстрьскъ]] иже Ѹкраины ѥстъ
+*[[Бѣлоградъ Дънѣстрьскъ]] иже Ѹкраинѣ ѥстъ
 
 [[am:በልግራድ]]
 [[ar:بلغراد]]
