Къ обьщѹѥмѹ видѹ привѣсъ.

--- a/Бѣлъ_Градъ.mw
+++ b/Бѣлъ_Градъ.mw
@@ -4,8 +4,7 @@
 
 *[[Бѣлъ Градъ (Срьбїи)|Бѣлоградъ]] иже Срьбїи ѥстъ.
 *[[Бѣлоградъ (Рѡсїи)|Бѣлоградъ]] иже Рѡсїи ѥстъ.
-*[[Бѣлоградъ Дънѣстрьскъ]] иже Ѹкраинѣ ѥстъ
-
+*[[Дънѣстрьскъ Бѣлоградъ|Бѣлоградъ]] иже Ѹкраинѣ ѥстъ.
 [[am:በልግራድ]]
 [[ar:بلغراد]]
 [[ast:Belgradu]]
