--- a/Бѣлъ_Градъ_·_Срьбїи.mw
+++ b/Бѣлъ_Градъ_·_Срьбїи.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Бѣлъ Градъ
 | знамѧ= Flag of Belgrade.png
 | знакъ = Small Coat of Arms Belgrade.svg
-| Дрьжава = Срьбїıа
+| Дрьжава = Срьбї
 | Глава = 
 | Людии =  1 795 124 
 | Основанъ =Г  вѣкъ до РХ
