*Empty MediaWiki Message*

--- a/Оукраиньскъ_ѩꙁꙑкъ.mw
+++ b/Оукраиньскъ_ѩꙁꙑкъ.mw
@@ -1,8 +1,42 @@
-'''Ѹкраиньскъ ѩзыкъ''' (ѹкраиньскы: ''українська мова'')  въсточьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥсть. Сыновл҄ии ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]], отъ ѥго же [[Рѹсьскъ ѩзыкъ|рѹсьскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Ѹкраиньскъ ѩзыкъ ѥстъ дрьжавьнъ ѩзыкъ [[Ѹкраина|Ѹкраины]].
+'''Ѹкраиньскъ ѩзыкъ''' (ѹкраиньскы: ''українська мова'')  въсточьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥсть. Сыновл҄ии ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]], отъ ѥго же [[Рѹсьскъ ѩзыкъ|рѹсьскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Ѹкраиньскъ ѩзыкъ ѥстъ дрьжавьнъ ѩзыкъ [[Ѹкраина|Ѹкраины]]. Глаголѭщь людии же с҄имь ѩзыкомь 40 леѡдръ сѫтъ.
 == Ѹкраиньска азъбѹкы  ==
-<div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
-Аа Бб Вв Гг Ґґ Дд Ее Єє Жж Зз Ии Іі Її Йй Кк Лл Мм Нн Оо Пп Рр Сс Тт Уу Фф Хх Цц Чч Шш Щщ Ьь Юю Яя '
-</div>
+{|cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
+!Бѹкы!!Имѧ!!Звѫкъ!!Бѹкы!!Имѧ!!Звѫкъ
+|-
+| А а || а /a/ || /a/ || Н н || ен /en/ || /n/
+|-
+| Б б || бе /be/ || /b/ || О о || о /o/ || /o/
+|-
+| В в || ве /ve/ || /v/, /w/ || П п || пе /pe/ || /p/
+|-
+| Г г || ге /&#614;e/ || /&#614;/ || Р р || ер /er/ || /r/
+|-
+| Ґ ґ || ґе /ge/ || /g/ || С с || ес /es/ || /s/
+|-
+| Д д || де /de/ || /d/ || Т т || те /te/ || /t/
+|-
+| Е е || е /e/ || /e/ || У у || у /u/ || /u/
+|-
+| Є є || є /je/ || /je/, /ʲe/ || Ф ф || еф /ef/ || /f/
+|-
+| Ж ж || же /&#658;e/ || /&#658;/ || Х х || ха /xa/ || /x/
+|-
+| З з || зе /ze/ || /z/ || Ц ц || це /&#x02a6;e/ || /&#x02a6;/
+|-
+| И и || и /&#618;/ || /&#618;/ || Ч ч || че /&#679;e/ || /&#679;/
+|-
+| І і || і /i/ || /i/ || Ш ш || ша /&#643;a/ || /&#643;/
+|-
+| Ї ї || ї /ji/ || /ji/ || Щ щ || ща /&#643;&#679;a/ ||/ʃʧ/
+|-
+| Й й || ий /&#618;j/,<br />йот /jot/ || /j/ || Ь ь || м’який знак <br />/mja&#712;k&#618;j znak/ || /ʲ/
+|-
+| К к || ка /ka/ || /k/ || Ю ю || ю /ju/ || /ju/, /ʲu/
+|-
+| Л л || ел /el/ || /l/ || Я я || я /ja/ || /ja/, /ʲa/
+|-
+| М м || ем /em/ || /m/
+|}
 
 == Зьри такожде ==
 {{InterWiki|uk|Головна стаття||ѹкраиньскыимь}}
