--- a/Оукраиньскъ_ѩꙁꙑкъ.mw
+++ b/Оукраиньскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Ѹкраиньскъ ѩзыкъ''' (ѹкраиньскы: ''українська мова'')  въсточьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥсть. Сыновл҄ии ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]], отъ ѥго же [[Рѹсьскъ ѩзыкъ|рѹсьскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Ѹкраиньскъ ѩзыкъ ѥстъ дрьжавьнъ ѩзыкъ [[Ѹкраина|Ѹкраины]]. Глаголѭщь людии же с҄имь ѩзыкомь 40 леѡдръ сѫтъ.
+'''Ѹкраиньскъ ѩзыкъ''' (ѹкраиньскы: ''українська мова'')  въсточьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥстъ. Сыновл҄ии ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥрѹсьска ѩзыка]], отъ ѥго же [[Рѹсьскъ ѩзыкъ|рѹсьскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Ѹкраиньскыи [[Ѹкраина|Ѹкраины]] дрьжавьнъ ѩзыкъ ѥстъ. Глаголѭщь с҄имь ѩзыкомь людии 40 леѡдръ сѫтъ.
 == Ѹкраиньска азъбѹкы  ==
 {|cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
 !Бѹкы!!Имѧ!!Звѫкъ!!Бѹкы!!Имѧ!!Звѫкъ
