--- a/Словѣньсци_ѩꙁꙑци.mw
+++ b/Словѣньсци_ѩꙁꙑци.mw
@@ -11,7 +11,7 @@
 
 Си же сѫтъ мрьтви '' въсточьни'' словѣньсци ѩзыци: 
 * [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|Древл҄ьн҄ь рѹсьскъ]] - о ѥго рѹсьскъ, ѹкраиньскъ и бѣлорѹсьскъ ѩзъци изишьли сѫтъ
-* [[Говоръ древл҄ьнѥновоградьскъ|древл҄ьнѥновоградьскъ]]
+* [[Древл҄ьнѥновоградьскъ ѩзыкъ|древл҄ьнѥновоградьскъ]]
 * [[Западьно-рѹсьскъ ѩзыкъ|западьно-рѹсьскъ (древл҄ьнъ бѣлорѹсьскъ)]]  - о ѥго бѣлорѹсьскъ ѩзъкъ  ѥстъ
 
 == Западьни ==
