*Empty MediaWiki Message*

--- a/Брѣстѣнꙑѩ_грамотꙑ.mw
+++ b/Брѣстѣнꙑѩ_грамотꙑ.mw
@@ -1,7 +1,7 @@
 [[Image:Birch bark document 210.jpg|thumb|]]
 '''Брѣстѣныѩ грамоты''' ({{Lang-ru|бересто}}) пьсаны [[Рѹсь|Рѹси]] на корѣ [[брѣза|брѣзы]] [[пьсало]]мь бѣхѫ, ѥгда sѣло драгъ [[пергаминъ]] бѣаше, а [[харта]] невѣдома. Без мала тысѧща грамотъ окрыта ѥстъ, вѧщьши ихъ чѧсть  [[Новъ Градъ|Новѣ Градѣ]], пакы же [[Пльсковъ|Пльсковѣ]], [[Смольньскъ|Смольньсцѣ]], [[Тръжькъ|Тръжьцѣ]], [[Рѹcа|Рѹсѣ]], [[Витьбьскъ|Витьбьсцѣ]], [[Мьстиславл҄ь|Мьстиславл҄и]], [[Прѣславл҄ь Рѣзаньскъ|Прѣѩславл҄и Р́ѣзаньсцѣ]] и пакы на [[Москъва|Москъвѣ]].
 
-Ѩже Новѣ Градѣ влѥны сѫтъ, пьсаны [[говоръ древл҄ьнѥновоградьскъ|говоромь древл҄ьнѥновоградьскомь]] сѫтъ, въпрѣкы томѹ мъногы и [[ѩзыкъ древл҄ьн҄ь рѹсьскъ|древл҄ьнѥмь рѹсьскомь]], ко по вьсеи [[Рѹсь|Рѹси]].
+Ѩже Новѣ Градѣ влѥны сѫтъ, пьсаны [[Древл҄ьнѥновоградьскъ ѩзыкъ|говоромь древл҄ьнѥновоградьскомь]] сѫтъ, въпрѣкы томѹ мъногы и [[ѩзыкъ древл҄ьн҄ь рѹсьскъ|древл҄ьнѥмь рѹсьскомь]], ко по вьсеи [[Рѹсь|Рѹси]].
 
 [[Category:Кыѥвьска Рѹсь]]
 [[Category:Новъ Градъ]]
