--- a/Виллиамъ_Флиндєрсъ_Пєтри.mw
+++ b/Виллиамъ_Флиндєрсъ_Пєтри.mw
@@ -1,8 +1,9 @@
-'''Флиндерсъ Петри''' [[Велика Британї|англїискъ]] археологъ бѣ кыи обрѣте гроби фараѡньскы [[Абѷдосъ|Абѷдосѣ]]. Прочи археологы бо рабомъ малѫ цѣнѫ дадѣахѫ и обрѣтениѥ истѧѕаахѫ а и мьздѫ истиньнѫ дадѣаше татьбѫ же избыстъ. Обрѣтѫ же раби ѥго рѫкѫ съ обьдо велико въ гробѣ Дъжера. И обьдо полага на мѣрилѣ а мьздѫ великѫ златомь дастъ. Самъчии же Каирьскъ ег҄ѵпьтѣнинъ сыи рѫкѫ вьрже въ бръселии !
+'''Флиндерсъ Петри''' ({{Lang-en|William Matthew Flinders Petrie}}, 1853-1942) [[Велика Британї|англїискъ]] археологъ бѣ кыи обрѣте гроби фараѡньскы [[Абѷдосъ|Абѷдосѣ]]. Прочи археологы бо рабомъ малѫ цѣнѫ дадѣахѫ и обрѣтениѥ истѧѕаахѫ а и мьздѫ истиньнѫ дадѣаше татьбѫ же избыстъ. Обрѣтѫ же раби ѥго рѫкѫ съ обьдо велико въ гробѣ Дъжера. И обьдо полага на мѣрилѣ а мьздѫ великѫ златомь дастъ. Самъчии же Каирьскъ ег҄ѵпьтѣнинъ сыи рѫкѫ вьрже въ бръселии !
 [[Category:Людиѥ]]
 [[ca:Flinders Petrie]]
 [[de:Flinders Petrie]]
 [[es:William Matthew Flinders Petrie]]
+[[en:William Matthew Flinders Petrie]]
 [[fr:William Matthew Flinders Petrie]]
 [[it:Flinders Petrie]]
 [[nl:William Flinders Petrie]]
