--- a/Аѳинꙑ.mw
+++ b/Аѳинꙑ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Аѳины
+{{Градъ|Имѧ = Аѳины
 | знамѧ= 
 | знакъ = 
 | Дрьжава = Грьци
 | Глава = 
 | Людии =  
 | Основанъ = 
-| map = [[Видъ:Localition Atene.png|200 px]]
+| Харта = [[Видъ:Localition Atene.png|200 px]]
 |}}
 '''Аѳины''' ([[Грьчьскъ ѩзыкъ|грьчьскы]]: ''Αθήναι'', ''Αθήνα'') ѥстъ стольнъ градъ [[Грьци|грьчьскъ]].
 
