--- a/Грьци.mw
+++ b/Грьци.mw
@@ -11,7 +11,7 @@
 }}
 '''Грьци''' ({{Lang-el|Ελλάδα}}, епїсимьно имѧ '''Грьчьска Димократї''' ({{Lang-el|Ελληνική Δημοκρατία}}) ѥстъ) [[Южьна Еѵрѡпа|Южьнѩ Еѵрѡпы]]  дрьжава ѥстъ. Стольнъ градъ Грьць [[Аѳины]] ѥстъ, людии обитаѥтъ 10,9 леѡдръ. Дрьжавьнъ ѩзыкъ Грьць [[Грьчьскъ ѩзыкъ|грьчьскъ]] ѥстъ.
 == Їсторї ==
-1453 годѣ [[Вѷзантїн҄ьска аѷтократорї]] въшьла бѣаше въ съставъ Осман҄ьскы аѷтократорїѩ. 1821 годѣ по народьна въстани  ѥстъ пакы самостотел҄ьна дрьжава. По 1833 же имѧ Гречьско Кралѥвьство бѣаше. По [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] Грьци пакы димократї ѥстъ.
+1453 годѣ [[Вѷзантїн҄ьска аѷтократорї]] въшьла бѣаше въ съставъ Осман҄ьскы аѷтократорїѩ. 1821 годѣ по народьна въстани Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 же имѧ Гречьско Кралѥвьство бѣаше. По [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] Грьци пакы димократї ѥстъ.
 
 == Гречьскы наибол҄ьше гради ==
 * Аѳины
