*Empty MediaWiki Message*

--- a/Грьци.mw
+++ b/Грьци.mw
@@ -9,7 +9,7 @@
 | Людии =  10,9 леѡдръ
 | Почѧта = 1821
 }}
-'''Грьци''' ({{Lang-el|Ελλάδα}}, епїсимьно имѧ '''Грьчьска Димократї''' ({{Lang-el|Ελληνική Δημοκρατία}}) ѥстъ) [[Южьна Еѵрѡпа|Южьнѩ Еѵрѡпы]]  дрьжава ѥстъ. Стольнъ градъ Грьць [[Аѳины]] ѥстъ, людии обитаѥтъ 10,9 леѡдръ. Дрьжавьнъ ѩзыкъ Грьць [[Грьчьскъ ѩзыкъ|грьчьскъ]] ѥстъ. Дрьжавьна вѣра [[Православиѥ]] ѥстъ<ref>Виждь Грьць ѹставъ книгѣ "''Конституции государств Европейского Союза''". М., 1997, стр. 245—246</ref>.
+'''Грьци''' ({{Lang-el|Ελλάδα}}, епїсимьно имѧ '''Грьчьска Димократї''' ({{Lang-el|Ελληνική Δημοκρατία}}) ѥстъ) [[Южьна Еѵрѡпа|Южьнѩ Еѵрѡпы]]  дрьжава ѥстъ. Стольнъ градъ Грьць [[Аѳины]] ѥстъ, людии обитаѥтъ 10,9 леѡдръ. Дрьжавьнъ ѩзыкъ Грьць [[Грьчьскъ ѩзыкъ|грьчьскъ]] ѥстъ. Дрьжавьна вѣра [[Православиѥ]] ѥстъ<ref>Виждь Грьць ѹставъ кънигѣ "''Конституции государств Европейского Союза''". М., 1997, стр. 245—246</ref>.
 == Їсторї ==
 1453 годѣ [[Вѷзантїн҄ьска аѷтократорї]] въшьла бѣаше въ съставъ Осман҄ьскы аѷтократорїѩ. 1821 годѣ по народьна въстани Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 же имѧ Грьчьско Кралѥвьство бѣаше. По [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] Грьци пакы димократї ѥстъ.
 
