/* Гречьскы наибол҄ьше гради */

--- a/Грьци.mw
+++ b/Грьци.mw
@@ -13,7 +13,7 @@
 == Їсторї ==
 1453 годѣ [[Вѷзантїн҄ьска аѷтократорї]] въшьла бѣаше въ съставъ Осман҄ьскы аѷтократорїѩ. 1821 годѣ по народьна въстани Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 же имѧ Грьчьско Кралѥвьство бѣаше. По [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] Грьци пакы димократї ѥстъ.
 
-== Гречьскы наибол҄ьше гради ==
+== Грьць наибол҄ьше гради ==
 * Аѳины
 * [[Корінѳъ]]
 * [[Ѳессалонїка]]
