--- a/Грьци.mw
+++ b/Грьци.mw
@@ -4,17 +4,18 @@
 | map = EU location GRE.png
 | Стол҄ьнъ градъ = [[Аѳины]]
 | Ѩзыкъ = [[Грьчьскъ ѩзыкъ|грьчьскъ]]
-| Глава = Каролосъ Попоѷліасъ
+| Глава = Каролъ Попѹлї
 | area =
 | Людии =  10,9 леѡдръ
 | Почѧта = 1821
 }}
-'''Грьци''' ({{Lang-el|Ελλάδα}}, епїсимьно имѧ '''Грьчьска Димократї''' ({{Lang-el|Ελληνική Δημοκρατία}}) ѥстъ) [[Южьна Еѵрѡпа|Южьнѩ Еѵрѡпы]]  дрьжава ѥстъ. Стольнъ градъ Грьць [[Аѳины]] ѥстъ, людии обитаѥтъ 10,9 леѡдръ. Дрьжавьнъ ѩзыкъ Грьць [[Грьчьскъ ѩзыкъ|грьчьскъ]] ѥстъ. Дрьжавьна вѣра [[Православиѥ]] ѥстъ<ref>Виждь Грьць ѹставъ кънигѣ "''Конституции государств Европейского Союза''". М., 1997, стр. 245—246</ref>.
-== Їсторї ==
-1453 годѣ [[Вѷзантїн҄ьска аѷтократорї]] въшьла бѣаше въ съставъ Осман҄ьскы аѷтократорїѩ. 1821 годѣ по народьна въстани Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 же имѧ Грьчьско Кралѥвьство бѣаше. По [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] Грьци пакы димократї ѥстъ.
+'''Грьци''' ({{Lang-el|Ελλάδα}}, епїсимьно имѧ '''Грьчьска Димократї''', {{Lang-el|Ελληνική Δημοκρατία}}) [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ. Стольнъ градъ Грьць [[Аѳины]] ѥстъ, людии обитаѥтъ 10,9 леѡдръ. Дрьжавьнъ [[Грьчьскъ ѩзыкъ|грьчьскъ]] ѥстъ. Дрьжавьна вѣра [[Православиѥ]] ѥстъ<ref>Виждь Грькъ ѹставъ къниѕѣ "''Конституции государств Европейского Союза''". М., 1997, стр. 245—246</ref>.
 
-== Грьць наибол҄ьше гради ==
-* Аѳины
+== Їсторї ==
+1453 лѣта [[Вѷзантїн҄ьска аѷтократорї]] въшьла въ съставъ Осман҄ьскы аѷтократорїѩ бѣ. 1821 лѣта по народьнѣ въстании Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 лѣтѣ ихъже имѧ Грьчьско Кралѥвьство бѣ. По [[Вътора Свѣтьна Воина|Въторѣи Свѣтьнѣи Воинѣ]] Грьци пакы димократї ѥстъ.
+
+== Грькъ наибол҄ьше гради ==
+* [[Аѳины]]
 * [[Корінѳъ]]
 * [[Ѳессалонїка]]
 
