--- a/Грьци.mw
+++ b/Грьци.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Greece.svg|150px]]
 | знакъ = [[image:COA of Greece.svg|80px]]
 | map = EU location GRE.png
-| Стол҄ьнъ градъ = [[Аѳины]]
+| Стольнъ градъ = [[Аѳины]]
 | Ѩзыкъ = [[Грьчьскъ ѩзыкъ|грьчьскъ]]
 | Глава = Каролъ Попѹлї
 | area =
