Речениѥ на добрѣѥ и блазны исправихъ.

--- a/Аѳинꙑ.mw
+++ b/Аѳинꙑ.mw
@@ -1,13 +1,13 @@
 {{Градъ|Имѧ = Аѳины
 | знамѧ= 
 | знакъ = 
-| Дрьжава = Грьци
+| Дрьжава = [[Грьци]]
 | Глава = 
 | Людии =  
-| Основанъ = 
+| Основанъ = исто невѣдомо ѥстъ, прѣдъ е҄ вѣкомь до х҃р
 | Харта = [[Видъ:Localition Atene.png|200 px]]
 |}}
-'''Аѳины''' ([[Грьчьскъ ѩзыкъ|грьчьскы]]: ''Αθήναι'', ''Αθήνα'') ѥстъ стольнъ градъ [[Грьци|грьчьскъ]].
+'''Аѳи́ны''' ([[Грьчьскъ ѩзыкъ|грьчьскы]]: ''Αθήναι'', ''Αθήνα'') [[Грьци|Грькъ]] стольнъ градъ ѥстъ.
 
 [[Category:All orphaned pages]]
 [[Category:Гради]]
