--- a/Грьци.mw
+++ b/Грьци.mw
@@ -9,7 +9,7 @@
 | Людии =  10,9 леѡдръ
 | Почѧта = 1821
 }}
-'''Грьци''' ({{Lang-el|Ελλάδα}}, епїсимьно имѧ '''Грьчьска Димократї''', {{Lang-el|Ελληνική Δημοκρατία}}) [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ. Стольнъ градъ Грьць [[Аѳины]] ѥстъ, людии обитаѥтъ 10,9 леѡдръ. Дрьжавьнъ [[Грьчьскъ ѩзыкъ|грьчьскъ]] ѥстъ. Дрьжавьна вѣра [[Православиѥ]] ѥстъ<ref>Виждь Грькъ ѹставъ къниѕѣ "''Конституции государств Европейского Союза''". М., 1997, стр. 245—246</ref>.
+'''Грьци''' ({{Lang-el|Ελλάδα}}, епїсимьно имѧ '''Грьчьска Димократї''', {{Lang-el|Ελληνική Δημοκρατία}}) [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ. Стол҄ьнъ градъ Грьць [[Аѳины]] ѥстъ, людии обитаѥтъ 10,9 леѡдръ. Дрьжавьнъ [[Грьчьскъ ѩзыкъ|грьчьскъ]] ѥстъ. Дрьжавьна вѣра [[Православиѥ]] ѥстъ<ref>Виждь Грькъ ѹставъ къниѕѣ "''Конституции государств Европейского Союза''". М., 1997, стр. 245—246</ref>.
 
 == Їсторї ==
 1453 лѣта [[Вѷзантїн҄ьска аѷтократорї]] въшьла въ съставъ Осман҄ьскы аѷтократорїѩ бѣ. 1821 лѣта по народьнѣ въстании Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 лѣтѣ ихъже имѧ Грьчьско Кралѥвьство бѣ. По [[Вътора Свѣтьна Воина|Въторѣи Свѣтьнѣи Воинѣ]] Грьци пакы димократї ѥстъ.
