*Empty MediaWiki Message*

--- a/Нармєръ.mw
+++ b/Нармєръ.mw
@@ -1,3 +1,3 @@
 '''Наръмеръ (Менесъ).'''
 
-Наръмеръ (Менесъ) бѣ [[фараѡнъ]] въ Нижьн҄и [[Егѷпьтъ|Ег҄ѷпьтѣ]] кыи въ лѣто 3150 до р҃ х҃ побѣди Горьн҄ь [[Егѷпьтъ|Егѷпьтъ]] и съведе обѣ цѣсар҄ьства.
+Наръмеръ (Менесъ) бѣ [[фараѡнъ]] въ Нижьн҄и [[Егѷпьтъ|Ег҄ѷпьтѣ]] кыи въ лѣто 3150 до р҃ х побѣди Горьн҄ь [[Егѷпьтъ|Егѷпьтъ]] и съведе обѣ цѣсар҄ьства.
