--- a/Литъва.mw
+++ b/Литъва.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag_of_Lithuania.svg|150px]]
 | знакъ = [[image:Coat of arms of Lithuania.png|80px]]
 | map = LocationLithuania.svg
-| Стол҄ьнъ градъ = [[Вилн҄ь]] 
+| Стольнъ градъ = [[Вилн҄ь]] 
 | Ѩзыкъ = [[Литъвьскъ ѩзыкъ|литъвьскъ]]
 | Глава = 
 | area =
