Речениѥ и блазны исправихъ.

--- a/Нармєръ.mw
+++ b/Нармєръ.mw
@@ -1,3 +1,1 @@
-'''Наръмеръ (Менесъ).'''
-
-Наръмеръ (Менесъ) бѣ [[фараѡнъ]] въ Нижьн҄и [[Егѷпьтъ|Ег҄ѷпьтѣ]] кыи въ лѣто 3150 до р҃ х побѣди Горьн҄ь [[Егѷпьтъ|Егѷпьтъ]] и съведе обѣ цѣсар҄ьства.
+'''Нармеръ''' [[Егѷпьтъ|Дольн Ег҄ѷпьта]] [[фараѡнъ]] бѣ, иже при лѣтѣ 3150 до х҄р прѣдолѣлъ [[Егѷпьтъ|Горьн҄ь Егѷпьтъ]] бѣ и съведе цѣсар҄ьствѣ въ ѥдино.
