--- a/Бѣлороусьскъ_ѩꙁꙑкъ.mw
+++ b/Бѣлороусьскъ_ѩꙁꙑкъ.mw
@@ -11,9 +11,9 @@
 </div>
 
 == Зьри такожде ==
-{{InterWiki|be|Галоўная старонка|| нынѣщьнѥѭ епїсимьноѭ орѳографїѥѭ бѣлорѹсьскыимь}}
+{{InterWiki|be|Галоўная старонка|| нынѣщьн҄ь епїсимьнъ положении бѣлорѹсьскыимь}}
 
-{{InterWiki|be-x-old|Галоўная старонка|| тарашкевичевоѭ орѳографїѥѭ бѣлорѹсьскыимь}}
+{{InterWiki|be-x-old|Галоўная старонка|| старъ положении бѣлорѹсьскыимь}}
 
 [[Category:Словѣньсци ѩзыци]]
 [[Category:Бѣла Рѹсь| ]]
