--- a/Бѣла_Роусь.mw
+++ b/Бѣла_Роусь.mw
@@ -2,14 +2,14 @@
 | знамѧ= [[Видъ:Flag of Belarus.svg|150px]]
 | знакъ = [[image:Coat of arms of Belarus.svg|80px]]
 | map = LocationBelarus.svg 
-| Стол҄ьнъ градъ = [[Мѣньскъ]]
+| Стольнъ градъ = [[Мѣньскъ]]
 | Ѩзыкъ = [[Ѩзыкъ бѣлорѹсьскъ|бѣлорѹсьскъ]], [[Ѩзыкъ рѹсьскъ|рѹсьскъ]] 
 | Глава = [[Алеѯандръ Лѹкашенко]]
 | area =
 | Людии = 9 леѡдръ
 | Почѧта = 1991
 }}
-'''Бѣла Рѹсь''' ({{Lang-be|Беларусь}}, {{Lang-ru|Белоруссия, Беларусь}}) ѥстъ дрьжава въсточьныѩ [[Еѵрѡпа|Еѵрѡпы]]. Дрьжавьни ѩзыци [[Ѩзыкъ бѣлорѹсьскъ|бѣлорѹсьскъ]] и [[Ѩзыкъ рѹсьскъ|рѹсьскъ]] сѫтъ. Стольнъ град Бѣлы Рѹси [[Мѣньскъ]] ѥстъ. Бѣлы Рѹси людии 9 леѡдръ обитаѥтъ.
+'''Бѣла Рѹсь''' ({{Lang-be|Беларусь}}, {{Lang-ru|Белоруссия, Беларусь}}) въсточьныѩ [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ. Дрьжавьна ѩзыка [[Ѩзыкъ бѣлорѹсьскъ|бѣлорѹсьскъ]] и [[Ѩзыкъ рѹсьскъ|рѹсьскъ]] ѥсте. Бѣлы Рѹси стольнъ градъ [[Мѣньскъ]] ѥстъ. Бѣлѣ Рѹси людии 9 леѡдръ обитаѥтъ.
 
 
 [[Category:Бѣла Рѹсь| ]]
