*Empty MediaWiki Message*

--- a/Чєшьско.mw
+++ b/Чєшьско.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of the Czech Republic.svg|150px]]
 | знакъ = [[image:Coat of arms of the Czech Republic.svg|80px]]
 | map = EU location CZE.png
-| Стол҄ьнъ градъ = [[Прага]]
+| Стольнъ градъ = [[Прага]]
 | Ѩзыкъ = [[Чешьскъ ѩзыкъ|чешьскъ]]
 | Глава = 
 | area =
