--- a/Босна_и_Хєрсєговина.mw
+++ b/Босна_и_Хєрсєговина.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Bosnia and Herzegovina.svg|150px]]
 | знакъ = [[image:Bosnia and Herzegovina Coats of Arms.svg|80px]]
 | map = Europe location BHG.png
-| Стол҄ьнъ градъ = [[Сараѥво]] 
+| Стольнъ градъ = [[Сараѥво]] 
 | Ѩзыкъ = [[Босньскъ ѩзыкъ|босньскъ]], [[Срьбьскъ ѩзыкъ|срьбьскъ]], [[Хръватьскъ ѩзыкъ|хръватьскъ]]
 | Глава = 
 | area =
