*Empty MediaWiki Message*

--- a/Блъгарїꙗ.mw
+++ b/Блъгарїꙗ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Bulgaria.svg|150px]]
 | знакъ = [[image:Bulgaria COA.svg|80px]]
 | map = LocationBulgaria.svg 
-| Стол҄ьнъ градъ = [[Софї]]
+| Стольнъ градъ = [[Софї]]
 | Ѩзыкъ = [[Блъгарьскъ ѩзыкъ|блъгарьскъ]]
 | Глава = 
 | area =
