*Empty MediaWiki Message*

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Russia.svg|150px|border|100px]]
 | знакъ = [[image:Coat of Arms of the Russian Federation.svg|80px]]
 | map = Rs-map-slovensky.png
-| Стол҄ьнъ градъ = [[Москъва]]
+| Стольнъ градъ = [[Москъва]]
 | Ѩзыкъ = [[ѩзыкъ рѹсьскъ|рѹсьскъ ѩзыкъ]]
 | Глава = [[Владимиръ Пѹтинъ]]
 | area =
