*Empty MediaWiki Message*

--- a/Їллѷрїиска_Словѣнїꙗ.mw
+++ b/Їллѷрїиска_Словѣнїꙗ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Slovenia.svg|150px]]
 | знакъ = [[image:Coat of Arms of Slovenia.svg|80px]]
 | map = EU location SLO.png 
-| Стол҄ьнъ градъ = [[Люблна]]
+| Стольнъ градъ = [[Люблна]]
 | Ѩзыкъ = [[їллѷрїиско-словѣньскъ ѩзыкъ|їллѷрїиско-словѣньскъ]]
 | Глава = 
 | area =
