--- a/Нѣмьци.mw
+++ b/Нѣмьци.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Germany.svg|150px]]
 | знакъ = [[image:Coat of Arms of Germany.svg|80px]]
 | map = LocationGermany.svg 
-| Стол҄ьнъ градъ = [[Берлинъ]]  
+| Стольнъ градъ = [[Берлинъ]]  
 | Ѩзыкъ = [[Нѣмьчьскъ ѩзыкъ|нѣмьчьскъ]] 
 | Глава = 
 | area =
