*Empty MediaWiki Message*

--- a/Сѣвєрьна_Макєдонїꙗ.mw
+++ b/Сѣвєрьна_Макєдонїꙗ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Macedonia.svg|150px]]
 | знакъ = [[image:SR Macedonia coa.png|80px]]
 | map = LocationMacedonia.svg 
-| Стол҄ьнъ градъ = [[Съкопиѥ]] 
+| Стольнъ градъ = [[Съкопиѥ]] 
 | Ѩзыкъ = [[Македоньскъ ѩзыкъ|македоньскъ]]
 | Глава = 
 | area =
