*Empty MediaWiki Message*

--- a/Пол҄ьска.mw
+++ b/Пол҄ьска.mw
@@ -3,7 +3,7 @@
 | знакъ = [[image:Coat of arms of Poland-official.png|80px]]
 | map = LocationPoland.svg 
 | Стол҄ьнъ градъ = [[Варшава]] 
-| Ѩзыкъ = [[Пол҄ьскъ ѩзыкъ|пол̑ьскъ]] 
+| Ѩзыкъ = [[Польскъ ѩзыкъ|пол̑ьскъ]] 
 | Глава = [[Льхъ Качиньскыи]] 
 | area =
 | Людии = 38,1 леѡдръ
