--- a/Чрьна_Гора.mw
+++ b/Чрьна_Гора.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Montenegro.svg|150px]]
 | знакъ = [[image:Coat of arms of Montenegro.svg|80px]]
 | map = LocationMontenegro.svg
-| Стол҄ьнъ градъ = [[Подъгорица]]
+| Стольнъ градъ = [[Подъгорица]]
 | Ѩзыкъ = [[срьбьскъ ѩзыкъ|срьбьскъ]]
 | Глава = 
 | area =
