*Empty MediaWiki Message*

--- a/Словѣньско.mw
+++ b/Словѣньско.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Slovakia.svg|150px]]
 | знакъ = [[image:Coat of Arms of Slovakia.svg|80px]]
 | map =EU location SVK.png
-| Стол҄ьнъ градъ = [[Братислава]]
+| Стольнъ градъ = [[Братислава]]
 | Ѩзыкъ = [[Карпатьско-словѣньскъ ѩзыкъ|карпатьско-словѣньскъ]] 
 | Глава = 
 | area =
