--- a/Срьбїꙗ.mw
+++ b/Срьбїꙗ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Serbia.svg|150px]]
 | знакъ = [[image:Coat of arms of Serbia.svg|80px]]
 | map = Europe location SRB.png 
-| Стол҄ьнъ градъ = [[Бѣлъ Градъ (Срьбїи)|Бѣлъ Градъ]]
+| Стольнъ градъ = [[Бѣлъ Градъ (Срьбїи)|Бѣлъ Градъ]]
 | Ѩзыкъ = [[срьбьскъ ѩзыкъ|срьбьскъ]]
 | Глава = 
 | area =
