*Empty MediaWiki Message*

--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Ukraine.svg|150px]]
 | знакъ = [[image:Coat of arms of Ukraine.svg|100px]]
 | map = LocationUkraine.svg 
-| Стол҄ьнъ градъ = [[Кыѥвъ]]
+| Стольнъ градъ = [[Кыѥвъ]]
 | Ѩзыкъ = [[Ѩзыкъ ѹкраиньскъ|ѹкраиньскъ]]
 | Глава = [[Вікторъ Ющенко]]
 |area =
