*Empty MediaWiki Message*

--- a/Хръватьска.mw
+++ b/Хръватьска.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag_of_Croatia.svg|150px]]
 | знакъ = [[image:Croatian Coat of Arms.svg|80px]]
 | map = LocationCroatia.svg 
-| Стол҄ьнъ градъ = [[Загребъ]]  
+| Стольнъ градъ = [[Загребъ]]  
 | Ѩзыкъ = [[хръватьскъ ѩзыкъ|хрьватьскъ]] 
 | Глава = 
 | area =
