*Empty MediaWiki Message*

--- a/Їталїꙗ.mw
+++ b/Їталїꙗ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Italy.svg|150px]]
 | знакъ = [[image:Italy-Emblem.svg|80px]]
 | map = LocationItaly.svg
-| Стол҄ьнъ градъ = [[Римъ]]  
+| Стольнъ градъ = [[Римъ]]  
 | Ѩзыкъ = [[Италїискъ ѩзыкъ|италїискъ]]
 | Глава = 
 | area =
