--- a/Їспанїꙗ.mw
+++ b/Їспанїꙗ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Spain.svg|150px]]
 | знакъ = [[image:Escudo de España.png|80px]]
 | map = LocationSpain.svg 
-| Стол҄ьнъ градъ = [[Мадрїдъ]]
+| Стольнъ градъ = [[Мадрїдъ]]
 | Ѩзыкъ = [[Їспаньскъ ѩзык|їспаньскъ]] 
 | Глава = 
 | area =
