*Empty MediaWiki Message*

--- a/Франкїꙗ.mw
+++ b/Франкїꙗ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of France.svg|150px]]
 | знакъ = [[image:France coa.png|80px]]
 | map = LocationFrance.svg
-| Стол҄ьнъ градъ = [[Парижь]]
+| Стольнъ градъ = [[Парижь]]
 | Ѩзыкъ = [[Франкїискъ ѩзыкъ|франкїискъ]]
 | Глава = 
 | area =
