*Empty MediaWiki Message*

--- a/Свєньско.mw
+++ b/Свєньско.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Sweden.svg|150px]]
 | знакъ = [[image:Sweden greater coa1908.png|80px]]
 | map = LocationSweden.svg 
-| Стол҄ьнъ градъ = [[Стоколмъ]] 
+| Стольнъ градъ = [[Стоколмъ]] 
 | Ѩзыкъ = [[Свеньскъ ѩзыкъ|свеньскъ]] 
 | Глава = 
 | area =
