--- a/Соумь.mw
+++ b/Соумь.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Finland.svg|150px]]
 | знакъ = [[image:Coat of arms of Finland.svg|80px]]
 | map = LocationFinland.svg 
-| Стол҄ьнъ градъ = 
+| Стольнъ градъ = Хельсинки
 | Ѩзыкъ = [[Сѹмьскъ ѩзыкъ|сѹмьскъ]], [[Свеньскъ ѩзыкъ|свеньскъ]]
 | Глава = 
 | area =
