*Empty MediaWiki Message*

--- a/Норєгъ.mw
+++ b/Норєгъ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Norway.svg|150px]]
 | знакъ = [[image:Coat of Arms of Norway.svg|80px]]
 | map = Europe location NOR.png
-| Стол҄ьнъ градъ = [[Осло]]
+| Стольнъ градъ = [[Осло]]
 | Ѩзыкъ = [[норьскъ ѩзыкъ|норьскъ]]
 | Глава = 
 | area =
