--- a/Хръватьскъ_ѩꙁꙑкъ.mw
+++ b/Хръватьскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Хръватьскъ ѩзыкъ''' (хрїватськы ''hrvatski jezik'')  дрьжавьнъ ѩзыкъ [[Хръватьска|Хръватьскы]] ѥсть.
+'''Хръватьскъ ѩзыкъ''' (хръватьскы ''hrvatski jezik'') [[Хръватьска|Хръватьскы]] дрьжавьнъ ѥсть.
 
 
 ==Хръватьска [[азъбѹкы]]==
@@ -16,13 +16,13 @@
 |-----
 | Č č || че ||| N n || енъ
 |-----
-| Ć ć || тѥ, коже кѷрилловьско ⱋ ||| Nj nj || нѥ/ен҄ь
+| Ć ć || тѥ, коже кѷриллово ⱋ ||| Nj nj || нѥ/ен҄ь
 |-----
 | D d || де || O o || о
 |-----
 | Dž dž || дже || P p || пе
 |-----
-| Đ đ || дѥ, коже кѷрилловьско ⰼ || R r || еръ
+| Đ đ || дѥ, коже кѷриллово ⰼ || R r || еръ
 |-----
 | E e || е || S s || есъ
 |-----
