--- a/Пол҄ьска.mw
+++ b/Пол҄ьска.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Poland.svg|150px]]
 | знакъ = [[image:Coat of arms of Poland-official.png|80px]]
 | map = LocationPoland.svg 
-| Стол҄ьнъ градъ = [[Варшава]] 
+| Стольнъ градъ = [[Варшава]] 
 | Ѩзыкъ = [[Польскъ ѩзыкъ|пол̑ьскъ]] 
 | Глава = [[Льхъ Качиньскыи]] 
 | area =
