*Empty MediaWiki Message*

--- a/Хоръ_Аха.mw
+++ b/Хоръ_Аха.mw
@@ -1,5 +1,5 @@
 '''Хоръ-Аха.'''
 
-Хоръ-Аха бѣ фараѡнъ [[Прьваıа дѵнастиıа Егѷпьта|прьваѩ дѵнастиѩ]] [[Егѷптъ|Егѷпьта]] кыи осныва градъ [[Мемъфисъ|Мемъфисъ]].
+Хоръ-Аха бѣ фараѡнъ [[Прьваıа дѵнастиıа Егѷпьта|прьваѩ дѵнастиѩ]] [[Егѷптъ|Егѷпьта]] иже осныва градъ [[Мемъфисъ|Мемъфисъ]].
 
 [[Category:Егѷптъ]]
