--- a/Мємфь.mw
+++ b/Мємфь.mw
@@ -1,3 +1,1 @@
-'''Мемъфисъ.'''
-
-Мемъфисъ стол҄ьнъ градъ бѣ древл҄ьн҄и [[Егѷпьтъ|Ег҄ѷпьтѣ]] иже основанъ быстъ [[Фараѡнъ|фараѡномь]] [[Хоръ-Аха|Хоръ-Аха]].
+'''Мемфь''' древл҄ьн [[Егѷптъ|Егѷпта]] стольнъ градъ бѣ, основанъ [[фараѡнъ|фараѡномь]] [[Хоръ-Аха|Хоръ-Ахоѭ]].
