--- a/Аравьскъ_ѩꙁꙑкъ.mw
+++ b/Аравьскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Ѩзыкъ аравьскъ''' (аравьскы: {{unicode|اللغة العربية}}) дрьжавьнъ ѩзыкъ аравьскїхъ странъ ѥстъ.
+'''Аравьскъ ѩзыкъ''' (аравьскы: {{unicode|اللغة العربية}}) [[аравьскы страны|аравьскъ странъ]] дрьжавьнъ ѩзыкъ ѥстъ.
 
 {{unicode|أ‎ ب‎ ج‎ د‎ ﻫ‎ و‎ ز‎ ح‎ ط‎ ي‎ ك‎ ل‎ م‎ ن‎ س‎ ع‎ ف‎ ص‎ ق‎ ر‎ ش‎ ت‎ ث‎ خ‎ ذ‎ ض‎ ظ‎ غ‎ }}
 
