--- a/Виллиамъ_Флиндєрсъ_Пєтри.mw
+++ b/Виллиамъ_Флиндєрсъ_Пєтри.mw
@@ -1,4 +1,4 @@
-'''Флиндерсъ Петри''' ({{Lang-en|William Matthew Flinders Petrie}}, 1853-1942) [[Велика Британї|англїискъ]] археологъ бѣ иже обрѣте гроби фараѡновъ [[Абѷдосъ|Абѷдосѣ]]. Прочи археологы бо рабомъ малѫ цѣнѫ дадѣахѫ и обрѣтениѥ истѧѕаахѫ а и мьздѫ истиньнѫ дадѣаше татьбѫ же избыстъ. Обрѣтѫ же раби ѥго рѫкѫ съ обьдо велико въ гробѣ Дъжера. И обьдо полага на мѣрилѣ а мьздѫ великѫ златомь дастъ. Самъчии же Каирьскъ ег҄ѵпьтѣнинъ сыи рѫкѫ вьрже въ бръселии !
+'''Флиндерсъ Петри''' ({{Lang-en|William Matthew Flinders Petrie}}, 1853—1942) [[Велика Британї|англїискъ]] археологъ бѣ иже обрѣте гроби фараѡновъ [[Абѷдосъ|Абѷдосѣ]]. Прочи археологы бо рабомъ малѫ цѣнѫ дадѣахѫ и обрѣтениѥ истѧѕаахѫ а и мьздѫ истиньнѫ дадѣаше татьбѫ же избыстъ. Обрѣтѫ же раби ѥго рѫкѫ съ обьдо велико въ гробѣ Дъжера. И обьдо полага на мѣрилѣ а мьздѫ великѫ златомь дастъ. Самъчии же Каирьскъ ег҄ѵпьтѣнинъ сыи рѫкѫ вьрже въ бръселии !
 [[Category:Людиѥ]]
 [[ca:Flinders Petrie]]
 [[de:Flinders Petrie]]
