*Empty MediaWiki Message*

--- a/Армєнїꙗ.mw
+++ b/Армєнїꙗ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Armenia.svg|150px]]
 | знакъ = [[image:Armenia coa.png|80px]]
 | map = LocationArmenia.png
-| Стол҄ьнъ градъ = 
+| Стольнъ градъ = 
 | Ѩзыкъ = [[Ѩзыкъ арменьскъ|арменьскъ]]
 | Глава = 
 | area =
