*Empty MediaWiki Message*

--- a/Ватиканъ.mw
+++ b/Ватиканъ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of the Vatican City.svg|150px]]
 | знакъ = [[image:Emblem of the Papacy.svg|80px]]
 | map = LocationVaticanCity.png
-| Стол҄ьнъ градъ = Ватиканъ 
+| Стольнъ градъ = Ватиканъ 
 | Ѩзыкъ = [[Латиньскъ ѩзыкъ|латиньскъ]]
 | Глава = 
 | area =
