--- a/Ватиканъ.mw
+++ b/Ватиканъ.mw
@@ -9,7 +9,7 @@
 | Людии =  890
 | Почѧта = 1929
 }}
-'''Ватиканъ''' ([[Латиньскъ ѩзыкъ|латиньскы]] ''Vaticanæ'') южьны [[Еѵрѡпа|Еѵрѡпы]] наимен҄ьши свѣта дрьжава ѥстъ.  Ватиканѥ 890 людии обитаѥтъ. Дръжавьнъ ѩзыкъ Ватикана ѥстъ [[латиньскъ ѩзыкъ]].
+'''Ватиканъ''' ([[Латиньскъ ѩзыкъ|латиньскы]] ''Vaticanæ'') южьны [[Еѵрѡпа|Еѵрѡпы]] наимен҄ьши свѣта дрьжава ѥстъ.  Ватиканѣ 890 людии обитаѥтъ. Дръжавьнъ ѩзыкъ Ватикана ѥстъ [[латиньскъ ѩзыкъ]].
 
 [[Category:Страны]]
 
