--- a/Канада.mw
+++ b/Канада.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Canada.svg|150px]]
 | знакъ = 
 | map = LocationCanada.svg 
-| Стол҄ьнъ градъ = [[Оттава]] 
+| Стольнъ градъ = [[Оттава]] 
 | Ѩзыкъ = [[Франкїискъ ѩзыкъ|франкїискъ]], [[Англїискъ ѩзыкъ|англїискъ]]
 | Глава = 
 | area =
