опять же -л҄ь- долой

--- a/Кѷпръ.mw
+++ b/Кѷпръ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag_of_Cyprus.svg|150px]]
 | знакъ = [[image:Cyprus Coat of Arms.png|80px]]
 | map = LocationCyprus.svg
-| Стол҄ьнъ градъ = 
+| Стольнъ градъ = 
 | Ѩзыкъ = 
 | Глава = 
 | area =
