robot  Adding: [[gv:Yn Ookraane]]

--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -55,6 +55,7 @@
 [[fy:Oekraïne]]
 [[ga:An Úcráin]]
 [[gl:Ucraína - Україна]]
+[[gv:Yn Ookraane]]
 [[he:אוקראינה]]
 [[hi:युक्रेन]]
 [[hr:Ukrajina]]
@@ -105,7 +106,6 @@
 [[ro:Ucraina]]
 [[roa-rup:Ucraina]]
 [[ru:Украина]]
-[[ru-sib:Украина]]
 [[sco:Ukraine]]
 [[se:Ukraina]]
 [[sh:Ukrajina]]
