*Empty MediaWiki Message*

--- a/Срѣдинꙗнє.mw
+++ b/Срѣдинꙗнє.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of China.svg|150px]]
 | знакъ = [[image:China guohui.png|80px]]
 | map = LocationPRChina.png 
-| Стол҄ьнъ градъ = [[Беи-Ѕин ]]  
+| Стольнъ градъ = [[Беи-Ѕин ]]  
 | Ѩзыкъ = [[срѣдиньскъ ѩзыкъ|срѣдиньскъ]]
 | Глава = 
 | area =
