--- a/Канада.mw
+++ b/Канада.mw
@@ -1,6 +1,6 @@
 {{Дрьжава|name = Канада
 | знамѧ= [[Видъ:Flag of Canada.svg|150px]]
-| знакъ = 
+| знакъ = [[Видъ:Bigcancoat.png|100px]]
 | map = LocationCanada.svg 
 | Стольнъ градъ = [[Оттава]] 
 | Ѩзыкъ = [[Франкїискъ ѩзыкъ|франкїискъ]], [[Англїискъ ѩзыкъ|англїискъ]]
