*Empty MediaWiki Message*

--- a/Єгѷптъ.mw
+++ b/Єгѷптъ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Egypt.svg|150px]]
 | знакъ = [[image:COA of Egypt.svg|80px]]
 | map =LocationEgypt.png 
-| Стол҄ьнъ градъ = 
+| Стольнъ градъ = 
 | Ѩзыкъ = [[Аравьскъ ѩзыкъ|аравьскъ]]
 | Глава = 
 | area =
