--- a/Авѷдъ.mw
+++ b/Авѷдъ.mw
@@ -1,1 +1,1 @@
-'''Абѷдосъ''' градъ бѣ древл҄ьн҄и [[Егѷптъ|Ег҄ѷпьтѣ]] иде жаль [[Осирисъ|Осирисова]] бѣ како писано ѥстъ [[мѷѳ|мѷѳѣхъ]] Ег҄ѷпьтьстѣхъ.
+'''Абѷдъ''' древл҄ьн [[Егѷптъ|Егѷпта]] градъ бѣ, иде [[Осїрь|Осїровъ]] гробъ бѣ, ко пьсано ѥстъ Егѷптьстѣхъ [[мѷѳъ|мѷѳѣхъ]].
