*Empty MediaWiki Message*

--- a/Асєнѥвъ_Градъ.mw
+++ b/Асєнѥвъ_Градъ.mw
@@ -7,7 +7,7 @@
 | Основанъ = ~3 тысѫщь лѣта до РХ
 | Харта = 
 }}
-'''Асеновград'' [[Блъгарї|Блъгарїѧ]] градъ ѥстъ. Людии обитаѥтъ 56 тысѫщь. Асеновград ѥстъ главьнъ градъ [[Пловдивска область|Пловдивскы  области]]. 
+'''Асеновград''' [[Блъгарї|Блъгарїѧ]] градъ ѥстъ. Людии обитаѥтъ 56 тысѫщь. Асеновград ѥстъ главьнъ градъ [[Пловдивска область|Пловдивскы  области]]. 
 [[Катигорї:Гради]]
 [[Катигорї:Блъгарї]]
 
