--- a/Грьци.mw
+++ b/Грьци.mw
@@ -14,6 +14,8 @@
 == Їсторї ==
 1453 лѣта [[Вѷзантїн҄ьска аѷтократорї]] въшьла въ съставъ Осман҄ьскы аѷтократорїѩ бѣ. 1821 лѣта по народьнѣ въстании Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 лѣтѣ ихъже имѧ Грьчьско Кралѥвьство бѣ. По [[Вътора Свѣтьна Воина|Въторѣи Свѣтьнѣи Воинѣ]] Грьци пакы димократї ѥстъ.
 
+1981 лѣта Грьци въшьли въ съставъ [[Еѵропьскыи Свѫзъ|Еѵропьскы Свѫзи]] бѣ.
+
 == Грькъ наибол҄ьше гради ==
 * [[Аѳины]]
 * [[Корінѳъ]]
