--- a/Грьци.mw
+++ b/Грьци.mw
@@ -16,6 +16,23 @@
 
 1981 лѣта Грьци въшьли въ съставъ [[Еѵропьскыи Свѫзъ|Еѵропьскы Свѫзи]] бѣ.
 
+== Грькь чѧсти ==
+[[Видъ:GreeceNumberedPerepheries.png|thumb|left|Грькь чѧсти]]
+Грьчьскы Димократїѩ чѧсти перїферїѩ ({{Lang-el|περιφέρειες}}) нарицаютъ сѧ. Ихъже малы чѧсти имѧ номъ ({{Lang-el|νομός}}) сѫть.
+# [[Аттїкъ]] (Αττική)
+# [[Срѣдьн Еллада]] (Κεντρική Ελλάδα)
+# [[Срѣдьн Македонї]] (Κεντρική Μακεδονία)
+# [[Критъ]] (Κρήτη)
+# [[Вьсточьна Македонї и Ѳракї]] (Ανατολική Μακεδονία και Θράκη)
+# [[Ипїръ]] (Ήπειρος)
+# [[Їонїискы острова]] (Ιόνια νησιά)
+# [[Сѣверьны Аїгаїискы острова]] (Βορείου Αιγαίου)
+# [[Пелопоннисъ]] (Πελοπόννησος)
+# [[Южьны Аїгаїискы острова]] (Νοτίου Αιγαίου)
+# [[Ѳессалї]] (Θεσσαλία)
+# [[Западьна Еллада]] (Δυτική Ελλάδα)
+# [[Западьна Македонї]] (Δυτική Μακεδονία)
+
 == Грькъ наибол҄ьше гради ==
 * [[Аѳины]]
 * [[Корінѳъ]]
