--- a/Грьци.mw
+++ b/Грьци.mw
@@ -19,6 +19,9 @@
 == Грькь чѧсти ==
 [[Видъ:GreeceNumberedPerepheries.png|thumb|left|Грькь чѧсти]]
 Грьчьскы Димократїѩ чѧсти перїферїѩ ({{Lang-el|περιφέρειες}}) нарицаютъ сѧ. Ихъже малы чѧсти имѧ номъ ({{Lang-el|νομός}}) сѫть.
+
+=== Перїферїѩ ===
+
 # [[Аттїкъ]] (Αττική)
 # [[Срѣдьн Еллада]] (Κεντρική Ελλάδα)
 # [[Срѣдьн Македонї]] (Κεντρική Μακεδονία)
