--- a/Грьци.mw
+++ b/Грьци.mw
@@ -37,9 +37,11 @@
 # [[Западьна Македонї]] (Δυτική Μακεδονία)
 
 == Грькъ наибол҄ьше гради ==
-* [[Аѳины]]
-* [[Корінѳъ]]
-* [[Ѳессалонїка]]
+* [[Аѳины]] – людии обитаѥтъ 3 761 810.
+* [[Ѳессалонїка]] – людии обитаѥтъ 348 920.
+* [[Патръ]] – людии обитаѥтъ 164 741.
+* [[Ираклеонъ]]  – людии обитаѥтъ 140 357.
+* [[Корінѳъ]] – людии обитаѥтъ 36,555.
 
 == Зьри такожде ==
 {{commonscat|Greece}}
