эх, чего бы дописать :(    .

--- a/Википєдїꙗ.mw
+++ b/Википєдїꙗ.mw
@@ -1,4 +1,4 @@
-'''Википедї''' ([[англїискъ ѩзыкъ|англїискы]] ''Wikipedia'') ѥстъ мъногоѩзычьна енкѵклопедї ѭже къжьдо можетъ измѣнти.
+'''Википедї''' ([[англїискъ ѩзыкъ|англїискы]] ''Wikipedia'') ѥстъ мъногоѩзычьна енкѷклопедї ѭже къжьдо можетъ измѣнти.
 
 <gallery>
 Видъ:WikiSlavNova2-4.png
