--- a/Асенѥвоградъ.mw
+++ b/Асенѥвоградъ.mw
@@ -1,19 +1,1 @@
-'''Асеновоградъ''' [[Блъгарї|Блъгарїѩ]] градъ ѥстъ.  Людии обитаѥтъ 40 тысѫщь.
-
-[[Category:Гради]]
-[[Category:Блъгарї]]
-
-[[bg:Асеновград]]
-[[de:Asenowgrad]]
-[[el:Στενήμαχος (Βουλγαρία)]]
-[[en:Asenovgrad]]
-[[fr:Asenovgrad]]
-[[gl:Asenovgrad - Асеновград]]
-[[mk:Асеновград]]
-[[nl:Asenovgrad]]
-[[pl:Asenowgrad]]
-[[pt:Asenovgrad]]
-[[ru:Асеновград]]
-[[sr:Асеновград]]
-[[sv:Asenovgrad]]
-[[tr:Asenovgrad]]
+#REDIRECT[[Асенѥвъ Градъ]]
