--- a/Асєнѥвъ_Градъ.mw
+++ b/Асєнѥвъ_Градъ.mw
@@ -1,13 +1,13 @@
-{{Градъ|Имѧ = Асеновград
+{{Градъ|Имѧ = Асенѥвъ Градъ
 | знамѧ= 
 | знакъ = Asenovgrad-coat-of-arms.svg
 | Дрьжава = Блъгарї
 | Глава = 
 | Людии = 56 тысѫщь
-| Основанъ = ~3 тысѫщь лѣта до РХ
+| Основанъ = ~3 тысѫщи лѣтъ до ХР
 | Харта = 
 }}
-'''Асеновград''' [[Блъгарї|Блъгарїѧ]] градъ ѥстъ. Людии обитаѥтъ 56 тысѫщь. Асеновград ѥстъ главьнъ градъ [[Пловдивска область|Пловдивскы  области]]. 
+'''Асенѥвъ Градъ''' ({{lang-bg|Асеновградъ}}) [[Блъгарї|Блъгарїи]] ѥстъ. Людии обитаѥтъ 56 тысѫщь. Асенѥвъ Градъ [[Плъпъдевьска область|Плъпъдевьскы области]] главьнъ ѥстъ. 
 [[Катигорї:Гради]]
 [[Катигорї:Блъгарї]]
 
