--- a/Пѷргъ.mw
+++ b/Пѷргъ.mw
@@ -1,3 +1,14 @@
-'''Бѹргасъ''' ѥстъ градъ [[Блъгарї]]ѩ. Людии обитаѥтъ 250 тысѫщь.
+{{Градъ|Имѧ = Бѹргасъ
+| знамѧ= 
+| знакъ = Burgas-coat-of-arms.svg
+| Дрьжава = Блъгарї
+| Глава = Иоанъ Костадиновъ
+| Людии = 305 тысѫщь
+| Основанъ = 
+| Харта = [[Видъ:Burgas location in Bulgaria.png]]
+}}
+'''Бѹргасъ''' ѥстъ градъ [[Блъгарї|Блъгарїѩ]]. Людии обитаѥтъ 305 тысѫщь. Бѹргасъ [[Бѹргасьска область|Бѹргасьскы области]] главьнъ ѥстъ. 
+{{commonscat|Burgas}}
 [[Category:Гради]]
 [[Катигорї:Блъгарї]]
+[[ru:Бургас]]
