--- a/Фїлїппополь.mw
+++ b/Фїлїппополь.mw
@@ -1,1 +1,50 @@
+{{Градъ|Имѧ = Плъпъдевъ
+| знамѧ= 
+| знакъ = Plovdiv-coat-of-arms.svg
+| Дрьжава = Блъгарї
+| Глава = Иванъ Чомаковъ
+| Людии = 376 тысѫщь
+| Основанъ = 
+| Харта = [[Видъ:Plovdiv location in Bulgaria.png]]
+}}
 '''Плъпъдевъ''' ({{lang-bg|Пловдив}}, прежде и ''Плъвдивъ'', ''Плъдинъ''. {{lang-el|Φιλιππούπολη}}. именѣ о [[ѳракїискъ ѩзыкъ|ѳракїиска]] Pulpudeva ѥсте. новѣ сътворѥноѥ [[словѣньскъ ѩзыкъ|словѣньскоѥ]] имѧ ѳракїискаѥго имене ко дрьвл҄ьнѣише вѣстаѥго образъ ѥстъ). [[Блъгарї|Блъгарїѩ]] [[Плъпъдевьска область|Плъпъдевьскы области]] главьнъ градъ ѥстъ. Людии обитаѥтъ 376 тысѫщь.
+{{commonscat|Plovdiv}}
+[[Category:Блъгарї]]
+[[ru:Пловдив]]
+[[ar:بلوفديف]]
+[[ast:Plovdiv]]
+[[bg:Пловдив]]
+[[br:Plovdiv]]
+[[ca:Plóvdiv]]
+[[cs:Plovdiv]]
+[[cy:Plovdiv]]
+[[de:Plowdiw]]
+[[el:Φιλιππούπολη]]
+[[en:Plovdiv]]
+[[eo:Plovdiv]]
+[[es:Plovdiv]]
+[[et:Plovdiv]]
+[[fi:Plovdiv]]
+[[fr:Plovdiv]]
+[[he:פלובדיב]]
+[[id:Plovdiv]]
+[[it:Filippopoli]]
+[[ja:プロヴディフ]]
+[[ka:პლოვდივი]]
+[[la:Philippopolis]]
+[[lt:Plovdivas]]
+[[lv:Plovdiva]]
+[[mk:Пловдив]]
+[[mt:Plovdiv]]
+[[nl:Plovdiv (stad)]]
+[[nn:Plovdiv]]
+[[no:Plovdiv]]
+[[pl:Płowdiw]]
+[[pt:Plovdiv]]
+[[rmy:Plovdiv]]
+[[sr:Пловдив]]
+[[sv:Plovdiv]]
+[[tr:Filibe]]
+[[uk:Пловдив]]
+[[vo:Plovdiv]]
+[[zh:普罗夫迪夫]]
