--- a/Пѷргъ.mw
+++ b/Пѷргъ.mw
@@ -1,4 +1,4 @@
-{{Градъ|Имѧ = Бѹргасъ
+{{Градъ|Имѧ = Пѷргъ
 | знамѧ= 
 | знакъ = Burgas-coat-of-arms.svg
 | Дрьжава = Блъгарї
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта = [[Видъ:Burgas location in Bulgaria.png]]
 }}
-'''Бѹргасъ''' ѥстъ градъ [[Блъгарї|Блъгарїѩ]]. Людии обитаѥтъ 305 тысѫщь. Бѹргасъ [[Бѹргасьска область|Бѹргасьскы области]] главьнъ ѥстъ. 
+'''Пѷргъ''' или '''Бѹргасъ''' ({{lang-bg|Бургас}}, {{lang-el|Πύργος}}) [[Блъгарї|Блъгарїѩ]] градъ ѥстъ. Людии обитаѥтъ 305 тысѫщь. Пѷргъ [[Пѷржьска область|Пѷржьскы области]] главьнъ градъ ѥстъ. 
 {{commonscat|Burgas}}
 [[Category:Гради]]
 [[Катигорї:Блъгарї]]
