--- a/Мєтро.mw
+++ b/Мєтро.mw
@@ -1,5 +1,5 @@
 [[Видъ:Platinum-Iridium meter bar.jpg|thumb|Образьць]]
-'''Метро''' (''знакъ бѹкъва '''м''' ('''m''') ѥстъ'') мѣра по [[Междѹнародьнъ мѣръ сѷстима|ММС]] ѥстъ. Ѥдьно метро равьно ѥстъ свѣтѹ проходѧщѹ [[деѵтеролепто|деѵтеролепта]] <sup>1</sup>/<sub>299.792.458</sub> чѧсть. 
+'''Метро''' (''кратъко '''м҃''') мѣра по [[Междѹнародьнъ мѣръ сѷстима|ММС]] ѥстъ. Ѥдьно метро равьно ѥстъ свѣтѹ проходѧщѹ [[деѵтеролепто|деѵтеролепта]] <sup>1</sup>/<sub>299.792.458</sub> чѧсть. 
 
 [[el:Μέτρο (μονάδα μήκους)]]
 [[ru:Метр]]
