блъгарьскы статїѩ sѣло краткы сѫть :(

--- a/Ламъ_·_Блъгарїи.mw
+++ b/Ламъ_·_Блъгарїи.mw
@@ -1,3 +1,14 @@
-'''Ломъ''' ѥстъ градъ [[Блъгарї|Блъгарїѩ]]  .
+{{Градъ|Имѧ = Ломъ
+| знамѧ= 
+| знакъ = 
+| Дрьжава = Блъгарї
+| Глава = Пенка Пенкова
+| Людии = 29 981
+ | Основанъ = 
+| Харта = [[Видъ:Lom location in Bulgaria.png]]
+}}
+'''Ломъ''' ѥстъ градъ [[Блъгарї|Блъгарїѩ]] . Людии обитаѥтъ 30 тысѫщь.
+
 [[Category:Гради]]
 [[Катигорї:Блъгарї]]
+[[bg:Лом]]
