--- a/Фїлїппополь.mw
+++ b/Фїлїппополь.mw
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта = [[Видъ:Plovdiv location in Bulgaria.png]]
 }}
-'''Плъпъдевъ''' ({{lang-bg|Пловдив}}, прѣжде и ''Плъвдивъ'', ''Плъдинъ''. {{lang-el|Φιλιππούπολη}}. именѣ о [[ѳракїискъ ѩзыкъ|ѳракїиска]] Pulpudeva ѥсте. новѣ сътворѥноѥ [[словѣньскъ ѩзыкъ|словѣньскоѥ]] имѧ ѳракїискаѥго имене ко дрьвл҄ьнѣише вѣстаѥго образъ ѥстъ). [[Блъгарї|Блъгарїѩ]] [[Плъпъдевьска область|Плъпъдевьскы области]] главьнъ градъ ѥстъ. Людии обитаѥтъ 376 тысѫщь.
+'''Фїлїппо́поль''' ({{lang-bg|Пловдив}}, прѣжде и ''Плъвдивъ'', ''Плъдинъ''. {{lang-el|Φιλιππούπολη}}. [[ѳракїискъ ѩзыкъ|ѳракїискы]] Pulpudeva). [[Блъгарї|Блъгарїѩ]] [[Фїллїпопольска область|Фїлїппопольскы области]] главьнъ градъ ѥстъ. Людии обитаѥтъ 376 тысѫщь.
 {{commonscat|Plovdiv}}
 [[Category:Блъгарї]]
 [[ru:Пловдив]]
