опять же, блъгарьскы статїѩ sѣло краткы сѫть :(

--- a/Монтана_·_Блъгарїи.mw
+++ b/Монтана_·_Блъгарїи.mw
@@ -1,3 +1,13 @@
-Монтана  ѥстъ градъ Блъгарї  ѩ.Людии обитаѥтъ 50 тысѫщь.
+{{Градъ|Имѧ = Монтана
+| знамѧ= 
+| знакъ = 
+| Дрьжава = Блъгарї
+| Глава = Зълатко Живковъ
+| Людии = 50 тысѫщь
+ | Основанъ = 
+| Харта = [[Видъ:Montana location in Bulgaria.png]]
+}}
+'''Монтана'''  ѥстъ градъ [[Блъгарї|Блъгарїѩ]]. Людии обитаѥтъ 50 тысѫщь. Главьнъ градъ Монтаньскы области ѥстъ.
 [[Category:Гради]]
 [[Катигорї:Блъгарї]]
+[[en:Montana, Bulgaria]]
