--- a/Нєва.mw
+++ b/Нєва.mw
@@ -1,3 +1,4 @@
+[[Видъ:Neva map.png|thumb]]
 '''Нева''' рѣка въ [[Рѡсї|Рѡсїи]] ѥсть. На Невѣ [[Санкт-Петербѹргъ]] построѥнъ ѥстъ.
 
 [[Category:Рѣкы]]
