имене вѣрьнѣи образъ

--- a/Монтана_·_Блъгарїи.mw
+++ b/Монтана_·_Блъгарїи.mw
@@ -2,7 +2,7 @@
 | знамѧ= 
 | знакъ = 
 | Дрьжава = Блъгарї
-| Глава = Зълатко Живковъ
+| Глава = Златъко Живъковъ
 | Людии = 50 тысѫщь
  | Основанъ = 
 | Харта = [[Видъ:Montana location in Bulgaria.png]]
