Исправихъ и нѣчьто допьсахъ.

--- a/Ламъ_·_Блъгарїи.mw
+++ b/Ламъ_·_Блъгарїи.mw
@@ -7,7 +7,7 @@
  | Основанъ = 
 | Харта = [[Видъ:Lom location in Bulgaria.png]]
 }}
-'''Ломъ''' ѥстъ градъ [[Блъгарї|Блъгарїѩ]] . Людии обитаѥтъ 30 тысѫщь.
+'''Ламъ''' [[Блъгарї|Блъгарїѩ]] сѣверо-запада градъ ѥстъ. Людии обитаѥтъ 30 тысѫщь.
 
 [[Category:Гради]]
 [[Катигорї:Блъгарї]]
