--- a/Грьци.mw
+++ b/Грьци.mw
@@ -17,24 +17,40 @@
 1981 лѣта Грьци въшьли въ съставъ [[Еѵропьскыи Свѫзъ|Еѵропьскы Свѫзи]] бѣ.
 
 == Грькь чѧсти ==
-[[Видъ:GreeceNumberedPerepheries.png|thumb|left|Грькь чѧсти]]
 Грьчьскы Димократїѩ чѧсти перїферїѩ ({{Lang-el|περιφέρειες}}) нарицаютъ сѧ. Ихъже малы чѧсти имѧ номъ ({{Lang-el|νομός}}) сѫть.
-
-=== Перїферїѩ ===
-
-# [[Аттїкъ]] (Αττική)
-# [[Срѣдьн Еллада]] (Κεντρική Ελλάδα)
-# [[Срѣдьн Македонї]] (Κεντρική Μακεδονία)
-# [[Критъ]] (Κρήτη)
-# [[Вьсточьна Македонї и Ѳракї]] (Ανατολική Μακεδονία και Θράκη)
-# [[Ипїръ]] (Ήπειρος)
-# [[Їонїискы острова]] (Ιόνια νησιά)
-# [[Сѣверьны Аїгаїискы острова]] (Βορείου Αιγαίου)
-# [[Пелопоннисъ]] (Πελοπόννησος)
-# [[Южьны Аїгаїискы острова]] (Νοτίου Αιγαίου)
-# [[Ѳессалї]] (Θεσσαλία)
-# [[Западьна Еллада]] (Δυτική Ελλάδα)
-# [[Западьна Македонї]] (Δυτική Μακεδονία)
+{| class="sortable" style="text-align:left; font-size:90%"
+|- style="font-size:100%; text-align:left"
+!width="40px"| Харта !! Число !!width="140px"| Перїферїѩ!!width="80px"| Главьнъ градъ !!width="80px"| Площѧдь !!width="80px"| Людии обитаѥтъ</tr>
+| rowspan=15 | [[Image:GreeceNumberedPerepheries.png|300px]]
+|-
+| 1 || [[Аттїкъ]] (Αττική) || [[Аѳины]] || style="text-align:right"|3,808 к҃м²|| style="text-align:right"|3,841,408
+|-
+| 2 || [[Срѣдьн Еллада]] (Κεντρική Ελλάδα) || [[Ламї]] || style="text-align:right"|15,549 к҃м²|| style="text-align:right"|614,614
+|-
+| 3 || [[Срѣдьн Македонї]] (Κεντρική Μακεδονία) || [[Ѳессалонїка]] ||style="text-align:right"|18,811 к҃м²|| style="text-align:right"|1,931,870
+|-
+| 4 || [[Критъ]] (Κρήτη) || [[Ираклеонъ]] || style="text-align:right"|6,336 к҃м²|| style="text-align:right"|623,666
+|-
+| 5 || [[Вьсточьна Македонї и Ѳракї]] (Ανατολική Μακεδονία και Θράκη) || [[Комотинъ]] || style="text-align:right"|14,157 к҃м²|| style="text-align:right"|623,248
+|-
+| 6 || [[Ипїръ]] (Ήπειρος) || [[Їѡаннїна]] ||style="text-align:right"|9,203 к҃м²|| style="text-align:right"|358,698
+|-
+| 7 || [[Їонїискы острова]] (Ιόνια νησιά) || [[Керкѷра]] || style="text-align:right"|2,307 к҃м²|| style="text-align:right"|220,097
+|-
+| 8 || [[Сѣверьны Аїгаїискы острова]] (Βορείου Αιγαίου) || [[Мѷтиленъ]] || style="text-align:right"|3,836 km²|| style="text-align:right"|208,151
+|-
+| 9 || [[Пелопоннисъ]] (Πελοπόννησος) || [[Трїполь]] || style="text-align:right"|15,490 km²|| style="text-align:right"| 650,310 
+|-
+| 10 || [[Южьны Аїгаїискы острова]] (Νοτίου Αιγαίου) || [[Ермѹполь]] || style="text-align:right"|5,286 km²|| style="text-align:right"|320,001
+|-
+| 11 || [[Ѳессалї]] (Θεσσαλία) || [[Ларїсса]] || style="text-align:right"|14.037 km²|| style="text-align:right"|760,714
+|-
+| 12 || [[Западьна Еллада]] (Δυτική Ελλάδα) || [[Патръ]] || style="text-align:right"|11,350 km²|| style="text-align:right"|753,267
+|-
+| 13 || [[Западьна Македонї]] (Δυτική Μακεδονία) || [[Козанъ]] || style="text-align:right"|9,451 km²|| style="text-align:right"|303,857
+|-
+| - || [[Аѳонъ]] || [[Карѵесъ]] || style="text-align:right"|390 km²|| style="text-align:right"|2,250
+|}
 
 == Грькъ наибол҄ьше гради ==
 * [[Аѳины]] – людии обитаѥтъ 3 761 810.
