--- a/Грьци.mw
+++ b/Грьци.mw
@@ -12,7 +12,7 @@
 '''Грьци''' ({{Lang-el|Ελλάδα}}, епїсимьно имѧ '''Грьчьска Димократї''', {{Lang-el|Ελληνική Δημοκρατία}}) [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ. Стольнъ градъ Грькъ [[Аѳины]] ѥстъ, людии обитаѥтъ 10,9 леѡдръ. Дрьжавьнъ [[Грьчьскъ ѩзыкъ|грьчьскъ]] ѥстъ. Дрьжавьна вѣра [[Православиѥ]] ѥстъ<ref>Виждь Грькъ ѹставъ къниѕѣ "''Конституции государств Европейского Союза''". М., 1997, стр. 245—246</ref>.
 
 == Їсторї ==
-1453 лѣта [[Вѷзантїн҄ьска аѷтократорї]] въшьла въ съставъ Осман҄ьскы аѷтократорїѩ бѣ. 1821 лѣта по народьнѣ въстании Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 лѣтѣ ихъже имѧ Грьчьско Кралѥвьство бѣ. По [[Вътора Свѣтьна Воина|Въторѣи Свѣтьнѣи Воинѣ]] Грьци пакы димократї ѥстъ.
+[[Видъ:Flag of Greece (1828-1978).svg|thumb|left|Грькь знамѧ (1828-1978).]]1453 лѣта [[Вѷзантїн҄ьска аѷтократорї]] въшьла въ съставъ Осман҄ьскы аѷтократорїѩ бѣ. 1821 лѣта по народьнѣ въстании Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 лѣтѣ ихъже имѧ Грьчьско Кралѥвьство бѣ. По [[Вътора Свѣтьна Воина|Въторѣи Свѣтьнѣи Воинѣ]] Грьци пакы димократї ѥстъ.
 
 1981 лѣта Грьци въшьли въ съставъ [[Еѵропьскыи Свѫзъ|Еѵропьскы Свѫзи]] бѣ.
 
