--- a/Грьци.mw
+++ b/Грьци.mw
@@ -18,7 +18,7 @@
 
 == Грькь чѧсти ==
 Грьчьскы Димократїѩ чѧсти перїферїѩ ({{Lang-el|περιφέρειες}}) нарицаютъ сѧ. Ихъже малы чѧсти имѧ номъ ({{Lang-el|νομός}}) сѫть.
-{| class="sortable" style="text-align:left; font-size:90%"
+{| class="sortable" cellSpacing="0" cellPadding="0" border="1" style="text-align:left; font-size:90%"
 |- style="font-size:100%; text-align:left"
 !width="40px"| Харта !! Число !!width="140px"| Перїферїѩ!!width="80px"| Главьнъ градъ !!width="80px"| Площѧдь !!width="80px"| Людии обитаѥтъ</tr>
 | rowspan=15 | [[Image:GreeceNumberedPerepheries.png|300px]]
